# BenchMARL

./: .codecov.yml  .coveragerc  .gitignore  .markdownlint-cli2.yaml  .markdownlintignore  .mdformat.toml  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  SECURITY.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: codeql.yml  lint.yml  magent_tests.yml  meltingpot_tests.yml  pettingzoo_tests.yml  smacv2_tests.yml  torchrl_stable_tests.yml  unit_tests.yml  vmas_tests.yml
benchmarl/: __init__.py  eval_results.py  evaluate.py  hydra_config.py  resume.py  run.py  utils.py
benchmarl/algorithms/: __init__.py  common.py  ensemble.py  iddpg.py  ippo.py  iql.py  isac.py  maddpg.py  mappo.py  masac.py  qmix.py  vdn.py
benchmarl/benchmark/: __init__.py  benchmark.py
benchmarl/conf/: __init__.py
benchmarl/conf/experiment/: base_experiment.yaml
benchmarl/environments/: __init__.py  common.py
benchmarl/environments/magent/: __init__.py  adversarial_pursuit.py  common.py
benchmarl/environments/meltingpot/: __init__.py  common.py
benchmarl/environments/pettingzoo/: __init__.py  common.py  multiwalker.py  simple_adversary.py  simple_crypto.py  simple_push.py  simple_reference.py  simple_speaker_listener.py  simple_spread.py  simple_tag.py  simple_world_comm.py  waterworld.py
benchmarl/environments/smacv2/: __init__.py  common.py
benchmarl/environments/vmas/: __init__.py  balance.py  ball_passage.py  ball_trajectory.py  buzz_wire.py  common.py  discovery.py  dispersion.py  dropout.py  flocking.py  football.py  give_way.py  joint_passage.py  joint_passage_size.py  multi_give_way.py  navigation.py  passage.py  reverse_transport.py  sampling.py  simple_adversary.py  simple_crypto.py  simple_push.py  simple_reference.py  simple_speaker_listener.py  simple_spread.py  simple_tag.py  simple_world_comm.py  transport.py  wheel.py  wind_flocking.py
benchmarl/experiment/: __init__.py  callback.py  experiment.py  logger.py
benchmarl/models/: __init__.py  cnn.py  common.py  deepsets.py  gnn.py  gru.py  lstm.py  mlp.py
docs/source/: conf.py
examples/callback/: custom_callback.py
examples/checkpointing/: reload_experiment.py  resume_experiment.py
examples/configuring/: configuring_algorithm.py  configuring_experiment.py  configuring_model.py  configuring_sequence_model.py  configuring_task.py
examples/ensemble/: README.md  ensemble_algorithm.py  ensemble_algorithm_and_model.py  ensemble_model.py
examples/evaluating/: evalaute_experiment.py
examples/extending/algorithm/: README.md
examples/extending/algorithm/algorithms/: customalgorithm.py
examples/extending/model/: README.md
examples/extending/model/models/: custommodel.py
examples/extending/task/: README.md
examples/extending/task/environments/customenv/: common.py  task_1.py
examples/plotting/: README.md  plot_benchmark.py
examples/running/: run_benchmark.py  run_experiment.py
examples/sweep/wandb/: readme.md  sweepconfig.yaml
fine_tuned/smacv2/: smacv2_run.py
test/: conftest.py  test_algorithm.py  test_callback.py  test_e2e_workflows.py  test_ensemble_coverage.py  test_experiment_coverage.py  test_gnn_coverage.py  test_logger.py  test_magent.py  test_masac_coverage.py  test_meltingpot.py  test_models.py  test_pettingzoo.py  test_smacv2.py  test_task.py  test_vmas.py  utils.py
