
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "benchmarl"
description = "BenchMARL - Multi-Agent Reinforcement Learning Benchmark"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]

# Ruff configuration - replaces flake8, isort, and other tools
[tool.ruff]
line-length = 88
target-version = "py38"

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".local",
]

[tool.ruff.lint]
# Enable pycodestyle (E, W), Pyflakes (F), isort (I), pydocstyle (D),
# pyupgrade (UP), flake8-bugbear (B), flake8-comprehensions (C4)
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "D",    # pydocstyle
]

# Maintain compatibility with existing setup.cfg ignores
ignore = [
    "E203",   # whitespace before ':'
    "E402",   # module level import not at top of file
    "E501",   # line too long (handled by formatter)
    "W605",   # invalid escape sequence
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D105",   # Missing docstring in magic method
    "D107",   # Missing docstring in __init__
    "D102",   # Missing docstring in public method
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "F405"]
"test_*.py" = ["F841", "E731", "E266", "D"]
"test/*.py" = ["F841", "E731", "E266", "D"]
"examples/**/*.py" = ["D", "UP006"]
"docs/**/*.py" = ["D"]
"fine_tuned/**/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["benchmarl"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# MyPy configuration - gradual typing approach
[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
pretty = true

# Gradual typing - start lenient, can tighten later
[[tool.mypy.overrides]]
module = [
    "torchrl.*",
    "hydra.*",
    "vmas.*",
    "pettingzoo.*",
    "torch_geometric.*",
    "moviepy.*",
    "wandb.*",
    "tqdm.*",
    "tensordict.*",
    "marl_eval.*",
    "yaml",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gpu: marks tests that require GPU",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["benchmarl"]
omit = [
    "*/test/*",
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/examples/*",
    "*/notebooks/*",
]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abstract",
]
ignore_errors = true
precision = 2
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
